# Password-Manager

./: README.md  index.html  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  entries.rs  export.rs  groups.rs  mod.rs  settings.rs  window.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/models/: entry.rs  group.rs  mod.rs  settings.rs
src/assets/styles/: main.css
src/components/entry/: EntryCard.vue  EntryDetail.vue  EntryForm.vue  EntryList.vue  index.ts
src/components/group/: GroupItem.vue  index.ts
src/components/layout/: AppHeader.vue  MainLayout.vue  Sidebar.vue  index.ts
src/components/settings/: ChangePasswordDialog.vue  SettingsDialog.vue  index.ts
src/components/ui/: Button.vue  Input.vue  Modal.vue  Select.vue  Toast.vue  index.ts
src/composables/: useAutoLock.ts  useToast.ts
src/quick-access/: QuickAccess.vue  main.ts
src/router/: index.ts
src/stores/: auth.ts  entries.ts  groups.ts  index.ts  settings.ts
src/types/: index.ts
src/views/: MainView.vue  SetupView.vue  UnlockView.vue
