[package]
name = "one-password"
version = "0.1.0"
description = "A local password manager"
authors = ["you"]
edition = "2021"

[lib]
name = "one_password_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "6"
thiserror = "2"
rust_xlsxwriter = "0.93"
